--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -22,8 +22,8 @@
         <td><%= listing.state %></td>
         <td><%= listing.description %></td>
         <td><%= link_to 'Show', "/shops/#{@shop.id}/listings/#{listing.id}" %></td>
-        <td><%= link_to 'Edit', edit_shop_listing_path(listing, @shop) %></td>
-        <td><%= link_to 'Destroy', shop_listing_path(listing, @shop), method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Edit', edit_shop_listing_path(@shop, listing) %></td>
+        <td><%= link_to 'Destroy', shop_listing_path(@shop, listing), method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
