--- a/app/views/listings/new.html.erb
+++ b/app/views/listings/new.html.erb
@@ -1,10 +1,11 @@
 <div class="jumbotron text-center" style="margin-bottom:0">
   <h1>Create New Listing</h1>
 </div>
+
 <%= render 'layouts/nav' %>
 <div class = "container">
 <h1>New Listing</h1>
 
-<%= render 'form', listing: @listing, shop: @shop %>
+<%= render 'form', shop: @shop, listing: @listing %>
 </div>
 <%= link_to 'Back', shop_listings_path %>
