--- a/app/views/session/new.html.erb
+++ b/app/views/session/new.html.erb
@@ -1,15 +1,20 @@
-<h1> Log In </h1>
+<div class="jumbotron text-center" style="margin-bottom:0">
+  <h1>Log In</h1>
+  </div>
+<%= render 'layouts/nav' %>
 
+<div class = "container">
 <%= form_with url: login_path do |form| %>
   <div class="form-group">
-    <%= form.label :username %>
+  <b>  <%= form.label :username %> </b>
     <%= form.text_field :username, class: 'form-control' %>
   </div>
 
   <div class="form-group">
-    <%= form.label :password %>
-    <%= form.text_field :password, class: 'form-control' %>
+    <b><%= form.label :password %> </b>
+    <%= form.password_field :password, class: 'form-control' %>
   </div>
 
   <%= button_tag 'Log in', class: 'btn btn-primary' %>
 <% end %>
+</div>
