--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,6 +1,10 @@
-<h1>Editing User</h1>
+<div class="jumbotron text-center" style="margin-bottom:0">
+  <h1>Edit User</h1>
+  </div>
+<%= render 'layouts/nav' %>
 
+<div class = "container">
 <%= render 'form', user: @user %>
 
 <%= link_to 'Show', @user %> |
-<%= link_to 'Back', users_path %>
+</div>
