--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,11 @@
-<h1>New User</h1>
+<div class="jumbotron text-center" style="margin-bottom:0">
+  <h1>Create New User</h1>
+</div>
+<%= render 'layouts/nav' %>
+
+<div class = "container">
 
 <%= render 'form', user: @user %>
-
-<%= link_to 'Back', users_path %>
+<br>
+<br>
+<br>
