--- a/app/views/shops/edit.html.erb
+++ b/app/views/shops/edit.html.erb
@@ -1,6 +1,10 @@
-<h1>Editing Shop</h1>
+<div class="jumbotron text-center" style="margin-bottom:0">
+  <h1>Editing Shop</h1>
+  </div>
+<%= render 'layouts/nav' %
+
 
 <%= render 'form', shop: @shop %>
 
-<%= link_to 'Show', @shop %> |
-<%= link_to 'Back', shops_path %>
+<%= link_to 'Show', user_shop_path %> |
+
