--- a/app/views/listings/_form.html.erb
+++ b/app/views/listings/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: [shop, listing], :html => { multipart: true }, local: true) do |form| %>
+<%= form_with(model: [@shop, listing], :html => { multipart: true }, local: true) do |form| %>
   <% if listing.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(listing.errors.count, "error") %> prohibited this listing from being saved:</h2>
@@ -27,13 +27,13 @@
   </div>
 
 <div class="form-group">
-    <%= form.check_box :state, id: :listing_state%>
-    <%= form.label :state %> 
+    <%= form.check_box :state, id: :listing_state %>
+    <%= form.label :active %> 
   </div>
 
     <div class="form-group">
     <%= form.label :image %>
-    <%= form.file_field :image, class: "form-control" %>
+    <%= form.file_field :avatar, class: "form-control" %>
   </div>
 
 
