--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -18,11 +18,15 @@
             <% @user.shops.each do |shop| %>
     <tr>
 <td>
-    <h5><b><%= link_to shop.name, "/shops/#{shop.id}",{:style=>'color:#5E5D11;', :class => "css_class"} %> </h5></td>
-        <td><h5><%= shop.description %> </h5></td>
-      <br>
-     <h6> <%= link_to 'Delete', "/shops/#{shop.id}", {:style=>'color:#DC1515;', :class => "css_class", method: :delete }%> <span>&nbsp;&nbsp;</span>
+    <h1><b><%= link_to shop.name, "/shops/#{shop.id}",{:style=>'color:#5E5D11;', :class => "css_class"} %> </h1></td>
+      <h5>Shop Description: </h5>
+        <h9><%= shop.description %> </h9>
+<br>
+<br>
 
+    
+
+<br><h6> <%= link_to 'Delete Shop', "/shops/#{shop.id}", {:style=>'color:#DC1515;', :class => "css_class", method: :delete }%> <span>&nbsp;&nbsp;</span>
             <%= link_to 'Create New Listing', new_shop_listing_path(shop) %></h6>
             <br>
 <br>
