--- a/app/views/shops/show.html.erb
+++ b/app/views/shops/show.html.erb
@@ -2,7 +2,7 @@
   <h1><%= @shop.name %></h1>
   <h6>owned by </h6>
   <% @shop.users.each do |user| %>
-<%= link_to user.username, "/users/#{user.id}", {:style=>'color:#00BBFF;', :class => "css_class"}  %> <br>
+<%= link_to user.username, "/users/#{user.id}", {:style=>'color:#813C09;', :class => "css_class"}  %> <br>
 <% end %>
   </div>
 
@@ -51,7 +51,7 @@
 </td>
 
 <td>
-
+$
   <%= listing.price %>
 </td>
 
@@ -89,5 +89,6 @@
 <br>
 <br>
 <br>
-</div>
+
 <%= link_to 'Back', shops_path %>
+</div>
