--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,32 +8,43 @@
   <div class="col-12">
     <h2>
       
-      <div class="float-right">
+      
         <% if logged_in? %>
           <% if @user == current_user %>
+          <div class="float-right">
             <%= link_to 'Edit Profile', edit_user_path(current_user), class: 'btn btn-primary' %>
             <%= link_to 'Delete Account', current_user, method: :delete, class: 'btn btn-danger' %>
             </div>
-
             <% @user.shops.each do |shop| %>
     <tr>
 <td>
     <h1><b><%= link_to shop.name, "/shops/#{shop.id}",{:style=>'color:#5E5D11;', :class => "css_class"} %> </h1></td>
-      <h5>Shop Description: </h5>
+      <h5 class="badge badge-light">Shop Description: </h5>
         <h9><%= shop.description %> </h9>
 <br>
 <br>
 
-    
-
+  
 <br><h6> <%= link_to 'Delete Shop', "/shops/#{shop.id}", {:style=>'color:#DC1515;', :class => "css_class", method: :delete }%> <span>&nbsp;&nbsp;</span>
             <%= link_to 'Create New Listing', new_shop_listing_path(shop) %></h6>
             <br>
 <br>
     <% end %>
 
+         
+<% else %>
+<% @user.shops.each do |shop| %>
+    <tr>
+<td>
+    <h1><b><%= link_to shop.name, "/shops/#{shop.id}",{:style=>'color:#5E5D11;', :class => "css_class"} %> </h1></td>
+      <h5 class="badge badge-light">Shop Description: </h5>
+        <h9><%= shop.description %> </h9>
+<br>
+<br>
 
-          <% end %>
+
+<% end %>
+        <% end %>
         <% end %>
 
         <% if !logged_in? %>
