--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -32,12 +32,10 @@
 
 <td>
 
-  <% if @listing.state = 1 %>
-  <% @str = "Active" %>
-  <%= @str %> 
+  <% if @listing.state == "1" %>
+Active
   <% else %>
-  <% @str = "Inactive" %>
-  <%= @str %>
+Inactive
   <% end %>
 </td>
 
@@ -59,5 +57,6 @@
 </tbody></table>
 
 
-<%= link_to 'Edit', edit_shop_listing_path(@listing) %> 
+<%= link_to 'Edit', edit_shop_listing_path(@listing) %> | 
+<%= link_to 'Back', shop_path(@shop) %> 
 
