--- a/app/views/shops/show.html.erb
+++ b/app/views/shops/show.html.erb
@@ -51,8 +51,8 @@
 </td>
 
 <td>
-$
-  <%= listing.price %>
+
+  $<%= listing.price %>
 </td>
 
 <td>
@@ -76,7 +76,26 @@ $
 	<% if @shop.users.include? @current_user %>
 <h6> <%= link_to 'Delete Listing', "/shops/#{@shop.id}/listings/#{listing.id}", {:style=>'color:#DC1515;', :class => "css_class", method: :delete }%> <span>&nbsp;&nbsp;</span>
 	<h6> <%= link_to 'Edit Listing', "/shops/#{@shop.id}/listings/#{listing.id}/edit" %> </h6>
-	<h6> <%= link_to 'Buy Item', "/listings/#{listing.id}/orders/new", {:style=>'color:#228B22;', :class => "css_class"} %> </h6>
+  <% end %>
+<%= form_tag charges_path do %>
+  <article>
+    <% if flash[:error].present? %>
+      <div id="error_explanation">
+        <p><%= flash[:error] %></p>
+      </div>
+    <% end %>
+    <label class="amount">
+      <span>Amount: $<%= listing.price %></span> 
+    </label>
+  </article>
+
+  <script src="https://checkout.stripe.com/checkout.js" class="stripe-button"
+          Stripe.setPublishableKey("pk_test_TiL6G3hGSyHQI6k1RHDVzAki");
+          data-key="<%= Rails.configuration.stripe[:publishable_key] %>"
+          data-description="A month's subscription"
+          data-amount="<%= listing.price * 100 %>"
+          data-locale="auto"></script>
+
 <br></li> </td></tr>
 </ol>
 
