--- a/app/views/charges/create.html.erb
+++ b/app/views/charges/create.html.erb
@@ -1,1 +1,5 @@
-<h2>Thanks, you paid <strong>$5.00</strong>!</h2>
+<div class="jumbotron text-center" style="margin-bottom:0">
+  <h1>Thanks for your order!</h1>
+  </div>
+  <%= render 'layouts/nav' %>
+
