fixed charge response

--- a/app/views/charges/create.html.erb
+++ b/app/views/charges/create.html.erb
@@ -1,5 +1,5 @@
-<div class="jumbotron text-center" style="margin-bottom:0">
+
   <h1>Thanks for your order!</h1>
-  </div>
-  <%= render 'layouts/nav' %>
+  <br>
+ <%= link_to 'Back', root_path %>
 
